# kll_sketch

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_kll.py  bench_plots.ipynb  validate_benchmarks.py
docs/: CHANGELOG.md  benchmarks.md  ci_evidence.md  operations.md  production-readiness.md  release-checklist.md
kll-sketch/: README.md  kll_sketch.py  pyproject.toml
kll_sketch/: __init__.py  _build_backend.py  _metadata.py  kll_sketch.py  pyproject.toml  requirements-test.txt
kll_sketch/tests/: conftest.py  test_kll.py  test_properties.py  test_random_seeds.py
tests/bench/: conftest.py  test_benchmarks.py
