[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kll-sketch"
version = "1.0.0"
description = "KLL streaming quantile sketch (mergeable, deterministic, zero deps)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Your Name" }]
keywords = ["quantiles", "sketch", "streaming", "kll", "data-structures"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/yourname/kll_sketch"
Repository = "https://github.com/yourname/kll_sketch"
